Added Vaca::String class. Added Vaca::Exception class. Added Vaca::System class. Added vaca_main(). The main/WinMain is defined inside vaca library.

--- a/makefile.lst
+++ b/makefile.lst
@@ -509,11 +509,15 @@ VACA_DIR = third_party/vaca
 VACA_SOURCES =					\
 	$(VACA_DIR)/src/Component.cpp		\
 	$(VACA_DIR)/src/Debug.cpp		\
+	$(VACA_DIR)/src/Exception.cpp		\
 	$(VACA_DIR)/src/Mutex.cpp		\
 	$(VACA_DIR)/src/Point.cpp		\
-	$(VACA_DIR)/src/Referenceable.cpp	\
 	$(VACA_DIR)/src/Rect.cpp		\
+	$(VACA_DIR)/src/Referenceable.cpp	\
 	$(VACA_DIR)/src/Size.cpp		\
+	$(VACA_DIR)/src/String.cpp		\
+	$(VACA_DIR)/src/System.cpp		\
+	$(VACA_DIR)/src/Vaca.cpp		\
 	$(VACA_DIR)/src/win32/Mutex.cpp
 
 VACA_OBJS = $(addprefix $(OBJ_DIR)/vaca.,		\
