--- a/makefile.lst
+++ b/makefile.lst
@@ -10,6 +10,7 @@ COMMON_SOURCES =					\
 	src/ase_exception.cpp				\
 	src/console.cpp					\
 	src/context.cpp					\
+	src/gfxmode.cpp					\
 	src/recent_files.cpp				\
 	src/ui_context.cpp				\
 	src/undoable.cpp				\
