Now the user can move selected pixels (still WIP). Details: Added EDITOR_STATE_MOVING_PIXELS state to Editor. Added PixelsMovement helper class. Added Undoable::paste_image().

--- a/makefile.lst
+++ b/makefile.lst
@@ -219,6 +219,7 @@ COMMON_SOURCES =					\
 	src/widgets/editor/cursor.cpp			\
 	src/widgets/editor/editor.cpp			\
 	src/widgets/editor/keys.cpp			\
+	src/widgets/editor/pixels_movement.cpp		\
 	src/widgets/fileview.cpp			\
 	src/widgets/groupbut.cpp			\
 	src/widgets/menuitem.cpp			\
