--- a/makefile.lnx
+++ b/makefile.lnx
@@ -54,7 +54,7 @@ distclean: clean
 install:
 	cp aseprite $(DEFAULT_PREFIX)/bin
 	cp -r data $(DEFAULT_PREFIX)/share/ase
-	cp AUTHORS.txt $(DEFAULT_PREFIX)/share/ase
+	cp README.html $(DEFAULT_PREFIX)/share/ase
 
 uninstall:
 	-rm  -vf $(DEFAULT_PREFIX)/bin/aseprite
