--- a/makefile.lst
+++ b/makefile.lst
@@ -22,6 +22,7 @@ COMMON_SOURCES =					\
 	src/commands/cmd_cel_properties.cpp		\
 	src/commands/cmd_change_color.cpp		\
 	src/commands/cmd_change_image_type.cpp		\
+	src/commands/cmd_check_updates.cpp		\
 	src/commands/cmd_clear.cpp			\
 	src/commands/cmd_close_file.cpp			\
 	src/commands/cmd_configure_screen.cpp		\
