Fixed "Quick Reference" command. Documentation is searched in different locations depending the operating system.

--- a/makefile.linux
+++ b/makefile.linux
@@ -54,6 +54,7 @@ distclean: clean
 install:
 	cp aseprite $(DEFAULT_PREFIX)/bin
 	cp -r data $(DEFAULT_PREFIX)/share/ase
+	cp -r docs $(DEFAULT_PREFIX)/share/ase
 	cp README.html $(DEFAULT_PREFIX)/share/ase
 
 uninstall:
