--- a/makefile.mingw
+++ b/makefile.mingw
@@ -66,7 +66,7 @@ default: all
 all: $(ASE)
 
 clean:
-	-rm -f $(ALL_OBJS) $(THIRD_PARTY_LIBS) $(OBJ_DIR)/icon.res
+	-rm -f $(ALL_OBJS) $(THIRD_PARTY_LIBS) $(OBJ_DIR)/resources_win32.res
 
 distclean: clean
 	-rm -f $(ASE)
