Add PreferredSizeEvent and Widget::onPreferredSize to replace JM_REQSIZE message. There are a lot of widgets in C code, so JM_REQSIZE cannot be removed until all widgets are converted to C++ classes.

--- a/makefile.lst
+++ b/makefile.lst
@@ -510,9 +510,11 @@ VACA_SOURCES =					\
 	$(VACA_DIR)/src/Application.cpp		\
 	$(VACA_DIR)/src/Component.cpp		\
 	$(VACA_DIR)/src/Debug.cpp		\
+	$(VACA_DIR)/src/Event.cpp		\
 	$(VACA_DIR)/src/Exception.cpp		\
 	$(VACA_DIR)/src/Mutex.cpp		\
 	$(VACA_DIR)/src/Point.cpp		\
+	$(VACA_DIR)/src/PreferredSizeEvent.cpp	\
 	$(VACA_DIR)/src/Property.cpp		\
 	$(VACA_DIR)/src/Rect.cpp		\
 	$(VACA_DIR)/src/Referenceable.cpp	\
