Use GLOB_RECURSE instead of GLOB to get all *_unittest.cpp files from the src/ directory.

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -34,8 +34,7 @@ include_directories(
   ${VACA_DIR}/include)
 
 # Files
-file(GLOB tests
-  app/*_unittest.cpp)
+file(GLOB_RECURSE tests *_unittest.cpp)
 
 ######################################################################
 # aseprite library
