Remove Vaca::Application class. Move Vaca::String class to src/base/string.h (and split_string and convert_to algorithms to src/base/).

--- a/src/base/CMakeLists.txt
+++ b/src/base/CMakeLists.txt
@@ -2,6 +2,7 @@
 # Copyright (C) 2001-2010  David Capello
 
 add_library(base-lib
+  convert_to.cpp
   errno_string.cpp
   mem_utils.cpp
   mutex.cpp)
