Move Vaca classes to base and gui libraries. + Remove Vaca::Referenceable class and move Vaca::SharedPtr<> to base/shared_ptr.h (now shared pointers can point to any type). + Move Vaca::Component/Event/Property/PreferredSizeEvent to gui/component.cpp.

--- a/src/gui/CMakeLists.txt
+++ b/src/gui/CMakeLists.txt
@@ -2,6 +2,8 @@
 # Copyright (C) 2001-2010  David Capello
 
 add_library(gui-lib
+  component.cpp
+  event.cpp
   jaccel.cpp
   jalert.cpp
   jbox.cpp
@@ -43,4 +45,6 @@ add_library(gui-lib
   jview.cpp
   jwidget.cpp
   jwindow.cpp
+  preferred_size_event.cpp
+  property.cpp
   themes/jstandard_theme.cpp)
